// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CML normaliser characterisation (CR-14) > damaged: capitalised enums 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "0ccf3dc3ccfd1780",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "5aa5313f77f1d116",
  },
  "a_study_in_scarlet": {
    "generate": "e5ae48becabab0b3",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jefferson Hope]); normalization assigned "Dr. John Watson" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "95ad260e95079041",
  },
  "aaron_rodd_diviner": {
    "generate": "51a229ca992b289b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e61743d9d934242a",
  },
  "an_african_millionaire": {
    "generate": "d498e71abcd7a42f",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "fe6ab2bd158db0e5",
  },
  "annihilation": {
    "generate": "3c37fbf77caeea8b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "c874f240cac0f435",
  },
  "as_a_thief_in_the_night": {
    "generate": "1d86c98add9b4bfd",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "c5c60ce5b5d32f73",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > damaged: cast fields blanked 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "4da05a250837c5fa",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "3e9a3767ef8c98dc",
  },
  "a_study_in_scarlet": {
    "generate": "d57c348322154012",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jefferson Hope]); normalization assigned "Sherlock Holmes" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "2aa2ca619d26e18e",
  },
  "aaron_rodd_diviner": {
    "generate": "f881158a2bedff13",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "7768e8697b7a894e",
  },
  "an_african_millionaire": {
    "generate": "bb976ada2e1b3bc3",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "58a83361540820d7",
  },
  "annihilation": {
    "generate": "e639772ef37094b1",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "275d89781451917d",
  },
  "as_a_thief_in_the_night": {
    "generate": "9b056880ca8c06a1",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "3fccdc4821407254",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > damaged: extra schema fields 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "f5176a36ba4dbd63",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e777f23f4a5d10bc",
  },
  "a_study_in_scarlet": {
    "generate": "39ead47a0690d61e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jefferson Hope]); normalization assigned "Sherlock Holmes" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e808cb98d1415049",
  },
  "aaron_rodd_diviner": {
    "generate": "a116dbbbb370ea2f",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "df0c10eadb681e5d",
  },
  "an_african_millionaire": {
    "generate": "19af2fa5dc46ef20",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "0aca9c14fa36380a",
  },
  "annihilation": {
    "generate": "37c3bfc24830f9c5",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "bd636d4b74fa2569",
  },
  "as_a_thief_in_the_night": {
    "generate": "c8176afb1088a144",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "18a6b82968b6d4b1",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > damaged: near-empty 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "cb047bed577aa503",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e616a01f233aa9ac",
  },
  "a_study_in_scarlet": {
    "generate": "d06344a0cb7cd8e2",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e5ac4755a50868d2",
  },
  "aaron_rodd_diviner": {
    "generate": "dda26ae53b3d9213",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "66c8dc243647fd27",
  },
  "an_african_millionaire": {
    "generate": "5a8c566866831876",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "9ac922118437a135",
  },
  "annihilation": {
    "generate": "d87a27359ece9c70",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "d0a1fa43adf25bc0",
  },
  "as_a_thief_in_the_night": {
    "generate": "82056a8624a0dce1",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "d77c2f7fb044917d",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > damaged: no culprit 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "f5176a36ba4dbd63",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Minnie Foster Wright" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "43c15ce58e03740e",
  },
  "a_study_in_scarlet": {
    "generate": "39ead47a0690d61e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Sherlock Holmes" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "272389b251eb8694",
  },
  "aaron_rodd_diviner": {
    "generate": "a116dbbbb370ea2f",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Harvey Grimm (Ed. Levy)" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "fcd37d507061e840",
  },
  "an_african_millionaire": {
    "generate": "19af2fa5dc46ef20",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Cuthbert Clay (Paul Finglemore)" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "101b4280d8cf82e0",
  },
  "annihilation": {
    "generate": "37c3bfc24830f9c5",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Henry Orbit" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "14a029ce5072c6b6",
  },
  "as_a_thief_in_the_night": {
    "generate": "c8176afb1088a144",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[]); normalization assigned "Barbara Monkhouse" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "4891cb81742a1277",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > damaged: one inference step 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "2408eeecbaeb4c51",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "436b080176e43bcb",
  },
  "a_study_in_scarlet": {
    "generate": "3f000578778264df",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jefferson Hope]); normalization assigned "Sherlock Holmes" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "bdaff2960344d5f6",
  },
  "aaron_rodd_diviner": {
    "generate": "219ab24682722dc9",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "f704ecea1bf468bd",
  },
  "an_african_millionaire": {
    "generate": "b4cf38eccdd94c83",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e1b62b53e9e909e8",
  },
  "annihilation": {
    "generate": "aa703b35cae1c66a",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "3da03949d8dcbbe1",
  },
  "as_a_thief_in_the_night": {
    "generate": "b621d5bb69826f09",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "058b87dd8aa91a97",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > damaged: sections missing 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "6723f36ed2723a5c",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "a0ddda3a9d4796ea",
  },
  "a_study_in_scarlet": {
    "generate": "7750e81c17518225",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jefferson Hope]); normalization assigned "Sherlock Holmes" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "4d5ffffbaf847164",
  },
  "aaron_rodd_diviner": {
    "generate": "0f12e834c6a6e40d",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "3bee6fa2610dbfb9",
  },
  "an_african_millionaire": {
    "generate": "692e1a2235c424e3",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "78f6c5280e8907d7",
  },
  "annihilation": {
    "generate": "1b731e047571cc48",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "9cb5da94dcb96947",
  },
  "as_a_thief_in_the_night": {
    "generate": "5bd52a29c48a8d20",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "87312ad972af1bf1",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > damaged: wrong types 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "5e86d07ca678aa21",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Minnie Foster Wright]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "0ff7456b347774b0",
  },
  "a_study_in_scarlet": {
    "generate": "f7bcb35ea42a504b",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jefferson Hope]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "2c148ded6ca160d0",
  },
  "aaron_rodd_diviner": {
    "generate": "ab8c1529bc3cdbb7",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Harvey Grimm (Ed. Levy)]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "9fe9ea7ca50ba7f3",
  },
  "an_african_millionaire": {
    "generate": "4eb1a4d2d52eeaf0",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Cuthbert Clay (Paul Finglemore), Cesarine]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "536cf0b069da4270",
  },
  "annihilation": {
    "generate": "9bff8cea982962be",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Henry Orbit]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "342f6302bb3b09c6",
  },
  "as_a_thief_in_the_night": {
    "generate": "30b1913d34a8f63b",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Barbara Monkhouse]); normalization assigned "Eleanor Voss" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "c315b1683f2381b5",
  },
}
`;

exports[`CML normaliser characterisation (CR-14) > every authored case, both profiles 1`] = `
{
  "a_jury_of_her_peers": {
    "generate": "f5176a36ba4dbd63",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "strangulation"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "5aa5313f77f1d116",
  },
  "a_study_in_scarlet": {
    "generate": "39ead47a0690d61e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jefferson Hope]); normalization assigned "Sherlock Holmes" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "95ad260e95079041",
  },
  "aaron_rodd_diviner": {
    "generate": "a116dbbbb370ea2f",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e61743d9d934242a",
  },
  "an_african_millionaire": {
    "generate": "19af2fa5dc46ef20",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "fe6ab2bd158db0e5",
  },
  "annihilation": {
    "generate": "37c3bfc24830f9c5",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "c874f240cac0f435",
  },
  "as_a_thief_in_the_night": {
    "generate": "c8176afb1088a144",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "c5c60ce5b5d32f73",
  },
  "ashes_to_ashes": {
    "generate": "ec76c9f002fa66e2",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "3bea7c4edac4a64e",
  },
  "bull_dog_drummond": {
    "generate": "759d6833e1b93e81",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "52ffe2167327eb3e",
  },
  "dark_power": {
    "generate": "f563b05342f980f8",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "830dc1b28f90a2a3",
  },
  "dead_men_s_money": {
    "generate": "3643788d8260d3a9",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "80ae6f9ea882499e",
  },
  "diana_of_kara_kara": {
    "generate": "bd1487bf21d48762",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Guiseppi Dempsi (Double Dan), Heloise van Oynne (Sally Chowster)]); normalization assigned "Diana Ford" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "adabe805958711e3",
  },
  "dorcas_dene_detective": {
    "generate": "19d14ebfa5cc44d9",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "07035cb9c5ca2ba7",
  },
  "dorcas_dene_detective_78210": {
    "generate": "5a4918d93eab2e88",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "4b7e3c342c43a965",
  },
  "footprints": {
    "generate": "38a9b3a64ba4fd42",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "aa0750ec0123cd61",
  },
  "gunman_s_bluff": {
    "generate": "5b40cdd03e81748e",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "01c0dd6405701306",
  },
  "in_the_mayor_s_parlour": {
    "generate": "cfd17874187ce40b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "3b9bcce610dccf92",
  },
  "in_the_onyx_lobby": {
    "generate": "a15420e938247c29",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[George Vail, Doctor Weldon]); normalization assigned "Richard Bates" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "729ec541b70464dc",
  },
  "jack_o_judgment": {
    "generate": "4300610cf4328bb8",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "1519711d3887225a",
  },
  "jacob_s_ladder": {
    "generate": "fccca705b668aaff",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "068577201283028a",
  },
  "lady_molly_of_scotland_yard": {
    "generate": "af74b4280721dbc6",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "ebac0a0106fc7ef5",
  },
  "malcolm_sage_detective": {
    "generate": "d07fc2cf608b0191",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
    ],
    "revise": "7cd541fe7c532079",
  },
  "martin_hewitt_investigator": {
    "generate": "0031349c086024fe",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "680d719e3c9b10c0",
  },
  "max_carrados": {
    "generate": "fd8de7b9de203e1d",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e56bb675c268d238",
  },
  "murder_in_the_maze": {
    "generate": "d8fe161665cc3035",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
    ],
    "revise": "e538f9f97f3696fe",
  },
  "mystery_ranch": {
    "generate": "4fcc67b3cc2eb7a9",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "43b3bb4ffa297609",
  },
  "no_clue": {
    "generate": "2a03ee70e29897f4",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Judge Tom Wilton]); normalization assigned "Catherine Brace" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "stabbing"",
      "[17-hitting-90 P3.1] death_method names a wound and no place on the body that it kills: "stabbing"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "cb20f3f7623881ec",
  },
  "nobody_s_man": {
    "generate": "66acb8e26f634530",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "c106b980930a51b6",
  },
  "poison_shadows": {
    "generate": "914416eee08f944d",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "f6db96e5ceb7e213",
  },
  "ramshackle_house": {
    "generate": "358b1abafaab0e00",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "de8320bd417039e7",
  },
  "raspberry_jam": {
    "generate": "d137f76773af951d",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Alvord Hendricks, Willy Hanlon]); normalization assigned "Sanford Embury" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "555393590b418244",
  },
  "ravensdene_court": {
    "generate": "f18639606fcb0f50",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "0e84a009a15c4f3a",
  },
  "room_13": {
    "generate": "d2a74083dd87b501",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "783a48ded3307436",
  },
  "stolen_idols": {
    "generate": "1bd488124bb74566",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "aa491e619b5e6ded",
  },
  "tangled_trails": {
    "generate": "38092a5f8f9249b5",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Shibo Horikawa (Shibo)]); normalization assigned "James Cunningham, Sr." from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
    ],
    "revise": "6cb0c373a43e3c9d",
  },
  "terror_keep": {
    "generate": "0dddd79ffdb6186a",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "545e49bf31f04fd1",
  },
  "that_affair_next_door": {
    "generate": "5674214342858783",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Olive Randolph (Ruth Oliver), Randolph Stone (John Randolph)]); normalization assigned "Franklin Van Burnam" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "7dd49263fbb3b266",
  },
  "the_amateur_cracksman": {
    "generate": "6177210e378dd434",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "02902da28046ce6a",
  },
  "the_angel_of_terror": {
    "generate": "e4001fd184530661",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "2ac38525b995c08c",
  },
  "the_avenger": {
    "generate": "07cf0f9dde7d573b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "e28a72a4d4e07ca0",
  },
  "the_bellamy_trial": {
    "generate": "223db55282bc4090",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "7e6074e22b9c0626",
  },
  "the_big_bow_mystery": {
    "generate": "269f902a525c0ff0",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "f0814cbc5c69df98",
  },
  "the_bishop_murder_case": {
    "generate": "7d3678baecd6331a",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "f3721379fd1e3437",
  },
  "the_black_abbot": {
    "generate": "4a92135f0fced808",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "0b53e49faae6d2d1",
  },
  "the_case_book_of_sherlock_holmes": {
    "generate": "6fbf843021192caa",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "31e9531889b517d6",
  },
  "the_case_of_oscar_brodski": {
    "generate": "4a27d6bc613a4540",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "ace2847150bace9e",
  },
  "the_cat_s_paw": {
    "generate": "b62baf67bc66a604",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "27293072436ad6a7",
  },
  "the_charing_cross_mystery": {
    "generate": "98539f70e1cb1b91",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "9156d738b9656fb5",
  },
  "the_chestermarke_instinct": {
    "generate": "a1b893fa4b01860b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "b0c580dedde2af0e",
  },
  "the_club_of_masks": {
    "generate": "bf441b49d83975ec",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "a7c9f3809f775906",
  },
  "the_clue": {
    "generate": "a7c6551f8753a28b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "2252a6800bfdf107",
  },
  "the_clue_of_the_new_pin": {
    "generate": "ea2b4f53e7aefd26",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "74a66fe72bd5e8bd",
  },
  "the_clue_of_the_twisted_candle": {
    "generate": "28def199e0440eb9",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "stabbing"",
      "[17-hitting-90 P3.1] death_method names a wound and no place on the body that it kills: "stabbing"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "2d0ae50ac0db2dca",
  },
  "the_come_back": {
    "generate": "8d935b54b4f2a497",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[McClellan Thorpe, Madame Parlato]); normalization assigned "Peter Crane" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "17851f56a22e79b2",
  },
  "the_corbin_necklace": {
    "generate": "bfa62ba4f06b485a",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "f11d63a01bd0f2ca",
  },
  "the_crime_code": {
    "generate": "22c07943c9713e7b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "c0153c7c2de36071",
  },
  "the_crimson_circle": {
    "generate": "7538c8b7fd15a67b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "3fcd48358718dedd",
  },
  "the_crow_s_inn_tragedy": {
    "generate": "f17a749b109fb69f",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Aubrey Todmarsh]); normalization assigned "Rev. James Collyer" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "a7de8b4c75abfec0",
  },
  "the_crystal_claw": {
    "generate": "a6ea5e47c5c91b6e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Hartley Humphreys]); normalization assigned "Rex Yelverton" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "d8b605db455f0bd0",
  },
  "the_curse_of_the_reckaviles": {
    "generate": "aa46f84538a2ced6",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Giles (Mr. Wheatland)]); normalization assigned "Fletcher" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "d5de8317fdd42074",
  },
  "the_d_arblay_mystery": {
    "generate": "601ce5874003be1e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mr. Simon Bendelow (alias Morris)]); normalization assigned "Stephen Gray" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "d46245756e377e48",
  },
  "the_dangerfield_talisman": {
    "generate": "7a43beb8acbb34d0",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mrs. Caistor Scorton]); normalization assigned "Rollo Dangerfield" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "fceb4a5e7ba52353",
  },
  "the_dangerous_game": {
    "generate": "eaeb05b8140b31ee",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "8f5456257e7986cc",
  },
  "the_dark_eyes_of_london": {
    "generate": "5776af08e4caba05",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "3385838235398715",
  },
  "the_desert_moon_mystery": {
    "generate": "20e97987dbc464a0",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "6cbaa1ad63b6a4c7",
  },
  "the_devil_s_paw": {
    "generate": "02c09b08fbdda742",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "7830069858cffb7b",
  },
  "the_draycott_murder_mystery": {
    "generate": "02806e5ed9fe43a8",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "d6c4270ed67b23e8",
  },
  "the_eye_of_osiris": {
    "generate": "6d9b6a87ced2f229",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Arthur Jellicoe]); normalization assigned "John Thorndyke" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "c08a039c465282cd",
  },
  "the_eyes_of_max_carrados": {
    "generate": "3f44da528df46a6a",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mr Chatton]); normalization assigned "Mr Powis" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "01553b0ad74a5cab",
  },
  "the_fellowship_of_the_frog": {
    "generate": "c7cd61137f619a6e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Joshua Broad (Saul Morris), Philo Johnson]); normalization assigned "Ray Bennett" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "efa2597b88f42725",
  },
  "the_fenchurch_street_mystery": {
    "generate": "77afce84f2382dcd",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "1a4e22e8dcbd5f18",
  },
  "the_film_mystery": {
    "generate": "5eb21fa8325d76b0",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "0de9668ca1c0b304",
  },
  "the_four_stragglers": {
    "generate": "64ba09ab0b59e610",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "21a0e5ed8e2dbd23",
  },
  "the_girl_from_hollywood": {
    "generate": "f2134135021647b3",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "8ae27e6e7b398649",
  },
  "the_girl_from_scotland_yard": {
    "generate": "30ddc27e35e0bf97",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "af0b1e2a2d097f30",
  },
  "the_golden_face": {
    "generate": "07aa6b0aa4bea33a",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "77251284b7a00355",
  },
  "the_golden_slipper_and_other_problems_for_violet_strange": {
    "generate": "5ff2f7a22f28e921",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "9cd324a4100ec537",
  },
  "the_gray_mask": {
    "generate": "81eeb1cc9b5b838f",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "89e61b195fa90e75",
  },
  "the_greene_murder_case": {
    "generate": "cfec842d35467bc2",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Ada Greene]); normalization assigned "Philo Vance" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "944ecb4eade2a52f",
  },
  "the_haunted_house": {
    "generate": "b94f808f644a96de",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "272319fd994106db",
  },
  "the_hound_of_the_baskervilles": {
    "generate": "d74f20773a7e8b20",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "fb652691e7fc505b",
  },
  "the_house_of_the_arrow": {
    "generate": "3493f944a3e5303a",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "503348219d799506",
  },
  "the_house_without_a_key": {
    "generate": "b0510087b3957543",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "stabbing"",
      "[17-hitting-90 P3.1] death_method names a wound and no place on the body that it kills: "stabbing"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "c1176c4f76ec9fcb",
  },
  "the_invisible_man": {
    "generate": "b905b11cf33ae550",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "stabbing"",
      "[17-hitting-90 P3.1] death_method names a wound and no place on the body that it kills: "stabbing"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "64314b2ea54ab861",
  },
  "the_la_chance_mine_mystery": {
    "generate": "543c1df5d98d383b",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "90ade1bea22214a3",
  },
  "the_lazy_detective": {
    "generate": "5b0c32dd23cbf746",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "38c630d58a73f746",
  },
  "the_leavenworth_case": {
    "generate": "cd18984fd9b87858",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mary Leavenworth, James Trueman Harwell]); normalization assigned "Everett Raymond" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "29e1d44d9d0db7af",
  },
  "the_lodger": {
    "generate": "6cc2920760917497",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mr. Sleuth]); normalization assigned "Ellen Bunting" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "b5ddb144b362dc37",
  },
  "the_loudwater_mystery": {
    "generate": "17dfce3e3bc614b0",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Herbert Manley]); normalization assigned "Lord Loudwater" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "dde36fb23aea19a3",
  },
  "the_magic_casket": {
    "generate": "1e0407d579bf46c5",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Uyenishi, Mr. Payne (alias Shenstone)]); normalization assigned "Dr. Thorndyke" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "70d9a10e55b255a1",
  },
  "the_man_in_the_dark": {
    "generate": "025ff69bd7fefe7e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Sir Stephen Wye]); normalization assigned "Alexander David Kinloch" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "c8f941c8bfc3f0fa",
  },
  "the_man_who_knew_too_much": {
    "generate": "968051198af91bb9",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Sir Henry Harland Fisher]); normalization assigned "Lord James Herries" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "722604240c6d686e",
  },
  "the_mardi_gras_mystery": {
    "generate": "ce7df32cfff6d195",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "04cea7d751cd4e2f",
  },
  "the_markenmore_mystery": {
    "generate": "a4660616b8c8a2e9",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mr. Carter]); normalization assigned "Guy Markenmore" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "d3f820cd78c07f0b",
  },
  "the_melody_of_death": {
    "generate": "c8f10f017a7f4232",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "3c7fa49074aaa0c7",
  },
  "the_memoirs_of_sherlock_holmes": {
    "generate": "4bb90f2f69678a35",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Silas Brown]); normalization assigned "John Straker" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "f91865d9f15ad6c1",
  },
  "the_meredith_mystery": {
    "generate": "e2c505cd528b2ddc",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "442354599113d491",
  },
  "the_middle_of_things": {
    "generate": "419ab92f3305c044",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Dr. Cortelyon (Dr. Martincole), Mrs. Killenhall (Mrs. Killerby)]); normalization assigned "Langton Hyde (Edward Cave, Nugent Starr)" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "bd213f8f9209b1a2",
  },
  "the_middle_temple_murder": {
    "generate": "dd6368d4028dd4c9",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "75d29d3221b4410a",
  },
  "the_mystery_girl": {
    "generate": "202de79f903a94e9",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Nogi]); normalization assigned "John Waring" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "f54e940323ba2f09",
  },
  "the_mystery_of_31_new_inn": {
    "generate": "388ab2f05aaede18",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "090b679847900739",
  },
  "the_mystery_of_a_hansom_cab": {
    "generate": "bd89c3765bb79d96",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "831bc37eb7a9009c",
  },
  "the_mystery_of_angelina_frood": {
    "generate": "240cb8ce6d18d86e",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "649aa88b4fd83fe8",
  },
  "the_mystery_of_the_yellow_room": {
    "generate": "d3e0a2db5c15d943",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Frédéric Larsan (Ballmeyer)]); normalization assigned "Monsieur Robert Darzac" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "e9da6564d9a6d3ad",
  },
  "the_owl_taxi": {
    "generate": "f18026abe299fe97",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "3f46dd31c8383321",
  },
  "the_paradise_mystery": {
    "generate": "323f0276004b73f1",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "ee458d35a59d1f13",
  },
  "the_problem_of_cell_13": {
    "generate": "a37c08a7e46970b8",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "6f533ec094e6927d",
  },
  "the_profiteers": {
    "generate": "b0175872ce4a5c09",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "7ac373bacbc86ea6",
  },
  "the_rat_trap": {
    "generate": "271c72aa2b1d02f1",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "0047e901e9655600",
  },
  "the_red_thumb_mark": {
    "generate": "664f62c9edb0a127",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "9ad44c59ee84ad3f",
  },
  "the_scarab_murder_case": {
    "generate": "f34e5f43448c5f61",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "ef1641171a1da430",
  },
  "the_secret_of_father_brown": {
    "generate": "8cc280161b5f0948",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[John Bankes]); normalization assigned "Osric Orm" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "892949ed4ebce141",
  },
  "the_shadow_of_the_wolf": {
    "generate": "4409d614b272045e",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "f4990072ec001fa9",
  },
  "the_sign_of_the_four": {
    "generate": "28a4ef3b6ffec9b1",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Jonathan Small, Tonga]); normalization assigned "Miss Mary Morstan" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "52473b483044bf9a",
  },
  "the_silent_bullet": {
    "generate": "8c07960ac231a64a",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
    ],
    "revise": "13b7828f50fc3120",
  },
  "the_sleuth_of_st_james_s_square": {
    "generate": "aeb6206058808401",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mr. Percy Thompson]); normalization assigned "Mr. Anthony Gosford" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "ef81bc588ee734c7",
  },
  "the_splendid_outcast": {
    "generate": "fd6c54066e9fc5ed",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "9c1120ed5f5fa4e4",
  },
  "the_sting": {
    "generate": "fd7e1e9776592578",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Dr. Laidlaw]); normalization assigned "Frank Gough" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "7c49bf0d3db00dd2",
  },
  "the_story_of_ivy": {
    "generate": "91322e4f27f15b9e",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "2561843b00d31c14",
  },
  "the_stowmarket_mystery": {
    "generate": "0e31ec4965ebce39",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Mr. Ooma]); normalization assigned "David Hume-Frazer" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "75de93cdb2ac9ac1",
  },
  "the_strange_countess": {
    "generate": "5dd735282ff0fc9d",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "7a891f9182aed0ec",
  },
  "the_strange_schemes_of_randolph_mason": {
    "generate": "52a662fb5d564ddb",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "1a13f4e79048fb90",
  },
  "the_stretton_street_affair": {
    "generate": "32852e1ab612e990",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "0b16eca153d60b1e",
  },
  "the_talleyrand_maxim": {
    "generate": "fed789aa310344ff",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "43361ad2f70cae8d",
  },
  "the_templeton_case": {
    "generate": "e67518df763e2762",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "0985d612c473a2fb",
  },
  "the_thirteenth_letter": {
    "generate": "6fbd070d63736f5e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Doctor Roberts]); normalization assigned "Paul Abbott" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "stabbing"",
      "[17-hitting-90 P3.1] death_method names a wound and no place on the body that it kills: "stabbing"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "8256e12670bb9ae6",
  },
  "the_three_just_men": {
    "generate": "6c02cfedaa12b406",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "0f1c4eb6bee04894",
  },
  "the_trouble_at_pinelands": {
    "generate": "bb7cb282e275e8ac",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
    ],
    "revise": "9b77e7642ecf0a38",
  },
  "the_unseen_ear": {
    "generate": "2773b7afce9fd231",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[John Hale, Jim Turner (Maud)]); normalization assigned "Joe Richards" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "f5bdc42a87cf2f3e",
  },
  "the_valley_of_fear": {
    "generate": "0c2570bb7b87d60f",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Boss McGinty]); normalization assigned "Ivy Douglas" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "59a033c2da8014ce",
  },
  "the_vanishing_of_betty_varian": {
    "generate": "ada1aa6d3e0a42c1",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "37f1d0ce3a3eec57",
  },
  "the_wisdom_of_father_brown": {
    "generate": "e96a2c5494fb65e8",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Isidore Bruno]); normalization assigned "Father Brown" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "17ff623ede25969b",
  },
  "the_wolves_and_the_lamb": {
    "generate": "1a83d9cbc97376ac",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "3576614b7fd43fe5",
  },
  "the_yellow_streak": {
    "generate": "43f481f3126e1b49",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "gunshot"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "35462ae2793cdfe0",
  },
  "this_house_to_let_51307": {
    "generate": "227e8043f1ee71a8",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
    ],
    "revise": "771f4d21b46fd174",
  },
  "three_sevens": {
    "generate": "8b935dae001e6f7e",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Count Wolf (Edwardo Cortinnys y Ottero)]); normalization assigned "Daniel Craig (Thomas Masters, Three Sevens)" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "cf5fd9efc03f1463",
  },
  "tragedy_at_ravensthorpe": {
    "generate": "0e07667bae785ace",
    "notes": [
      "Agent 3 returned no usable culprit (culprits=[Thomas Marden, J. B. Foss (Thomas Pailton, alias Cocoa Tom)]); normalization assigned "Cecil Chacewater" from the cast. The case did not decide its own answer.",
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "02a2771b2152d719",
  },
  "unravelled_knots": {
    "generate": "045606c6bae6c29d",
    "notes": [
      "[A_102 means-link] UNKNOWN: death_method names no instrument to trace: "poisoning"",
      "[17-hitting-90 P3.2] constraint_space.time.windows states no window about the act with two ends — the reveal has no opening and closing time to give",
    ],
    "revise": "433db3829ec6e501",
  },
}
`;
